--- a/templates/main.html
+++ b/templates/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ALOHA Random Defense</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
     <h1>{{ update_time }}</h1>
