--- a/templates/main.html
+++ b/templates/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ALOHA Random Defense</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -15,12 +16,12 @@
             {% if problem_list[level] %}
                 {% for problem in problem_list[level] %}
                     <li class="problem_list_item">
-                        <img src="{{ 'https://static.solved.ac/tier_small/' + problem.img_src }}" alt="{{ problem.alt_level }}" width="20">
-                        <a href="{{ problem.url }} ">{{ problem.problem_id + problem.title }}</a>
+                        <img src="{{ 'https://static.solved.ac/tier_small/' + problem.img_src }}" alt="{{ problem.alt_level }}" width="15">
+                        <a href="{{ problem.url }} ">{{ problem.problem_id }} {{ problem.title }}</a>
                     </li>
                 {% endfor %}
             {% else %}
-                <li class="problem_list_not_found_item">문제 부족</li>
+                <li class="problem_list_not_found_item">문제가 선정되지 않았습니다.</li>
             {% endif %}
             </ul>
         </div>
